kubernetes/apps/saas-gompha/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saas-gompha-prod
  labels:
    app.kubernetes.io/part-of: gompha
    gompha.io/env: prod
